Adjusted page so that user doesn't see the broken images when the page first loads

--- a/lab 3 - rock paper scissors/RockPaperScissors/Rock_Paper_Scissors/wwwroot/css/site.css
+++ b/lab 3 - rock paper scissors/RockPaperScissors/Rock_Paper_Scissors/wwwroot/css/site.css
@@ -7,6 +7,14 @@ body {
     color: #f1f1f1;
 }
 
+.firstTime {
+    display: none;
+}
+
+.postback {
+    display: block;
+}
+
 .gameScreen {
     margin-top: 25px;
 }
