--- a/lab 3 - rock paper scissors/RockPaperScissors/Rock_Paper_Scissors/Pages/Index.cshtml
+++ b/lab 3 - rock paper scissors/RockPaperScissors/Rock_Paper_Scissors/Pages/Index.cshtml
@@ -26,7 +26,7 @@
         <input type="hidden" name="gameScore" value="@Model.gameScore" />
     </form>
 
-        <div class="col-xs-7 col">
+        <div class="col-xs-7 @Model.resultsClass">
             <div class="row">
                 <div class="col-xs-3">
                     <p>You: @Model.userScore</p>
