added content to the about and contact pages

--- a/lab 3 - rock paper scissors/RockPaperScissors/Rock_Paper_Scissors/Pages/Contact.cshtml
+++ b/lab 3 - rock paper scissors/RockPaperScissors/Rock_Paper_Scissors/Pages/Contact.cshtml
@@ -4,16 +4,20 @@
     ViewData["Title"] = "Contact";
 }
 <h2>@ViewData["Title"]</h2>
-<h3>@Model.Message</h3>
+<h3>Adam Knitter</h3>
+<p>
+    I am a student at Lorain County Community College pursuing an Associates Degree of Business focused on computer programming
+</p>
+
+<p>
+    This is a school project
+    for CISS 243 Web Databse Integration
+    at Lorain County Community College
+</p>
+<p>
+    If you have any questions please contact me using the email address provided below.  Thank you for taking the time to review this site.
+</p>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
-
-<address>
-    <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Email</strong> <a href="mailto:knitter0288@gmail.com">knitter0288@gmail.com</a><br />
 </address>
