removed the privacy page and cookie consent banner

--- a/lab 3 - rock paper scissors/RockPaperScissors/Rock_Paper_Scissors/Pages/Contact.cshtml
+++ b/lab 3 - rock paper scissors/RockPaperScissors/Rock_Paper_Scissors/Pages/Contact.cshtml
@@ -10,10 +10,9 @@
 </p>
 
 <p>
-    This is a school project
-    for CISS 243 Web Databse Integration
-    at Lorain County Community College
+    This is a school project for CISS 243 Web Databse Integration at Lorain County Community College
 </p>
+
 <p>
     If you have any questions please contact me using the email address provided below.  Thank you for taking the time to review this site.
 </p>
