--- a/lab7/RazorPagesMovie/Pages/Actors/Delete.cshtml
+++ b/lab7/RazorPagesMovie/Pages/Actors/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{id:int?}"
 @model RazorPagesMovie.Pages.Actors.DeleteModel
 
 @{
@@ -37,7 +37,7 @@
             @Html.DisplayFor(model => model.Actor.BirthDate)
         </dd>
     </dl>
-    
+
     <form method="post">
         <input type="hidden" asp-for="Actor.ID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
