--- a/lab7/RazorPagesMovie/Pages/Index.cshtml
+++ b/lab7/RazorPagesMovie/Pages/Index.cshtml
@@ -1,10 +1,13 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "Lab 7";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Adam Knitter</h1>
+        <h2 class="display-4">CISS 243</h2>
+        <h3 class="col-sm-6">Lab 7</h3>
+        <p>In this lab we created 2 tabels in a data base and used code generation to create CRUD pages for them</p>
+        <p>Use the links above to view the tables</p>
+    </div>
