Cleaned up homepage text.  added lab instructions page

--- a/Lab 10/Lab/IdentityLabs/Pages/Index.cshtml
+++ b/Lab 10/Lab/IdentityLabs/Pages/Index.cshtml
@@ -1,10 +1,14 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page";
+    ViewData["Title"] = "IdentityLabs";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1>Lab 10 - Identity With Razor Pages</h1>
+    <h2>CISS 243 - Adam Knitter</h2>
+    <p>This application uses Identity to control access to who can interact with data in the database.  
+        A user without an account can see the data in the table but not manipulate it.  
+        Only a user with an account can manipulate the data.
+    </p>
 </div>
