--- a/Lab 10/Lab/IdentityLabs/Pages/Shared/_Layout.cshtml
+++ b/Lab 10/Lab/IdentityLabs/Pages/Shared/_Layout.cshtml
@@ -20,10 +20,10 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Customers/Index">Customer List</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Customers/Index">Customer List</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/LabInstructions">Lab Instructions</a>
                         </li>
                     </ul>
                 </div>
