--- a/project/Final Project/ReadingListManager/Pages/Books/Index.cshtml
+++ b/project/Final Project/ReadingListManager/Pages/Books/Index.cshtml
@@ -16,6 +16,15 @@
             <th>
                 @Html.DisplayNameFor(model => model.Book[0].Title)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Book[0].Author)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Book[0].Genre)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Book[0].SeriesInfo)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -24,6 +33,15 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Author.FullName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Genre.Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SeriesInfo.Name)
             </td>
             <td>
                 <a asp-page="./Edit" asp-route-id="@item.BookID">Edit</a> |
