--- a/project/Final Project/ReadingListManager/Pages/UserBookList/Create.cshtml
+++ b/project/Final Project/ReadingListManager/Pages/UserBookList/Create.cshtml
@@ -16,7 +16,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="UserBookEntry.DateAdded" class="control-label"></label>
-                <input asp-for="UserBookEntry.DateAdded" class="form-control" />
+                <input asp-for="UserBookEntry.DateAdded" class="form-control"/>
                 <span asp-validation-for="UserBookEntry.DateAdded" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -38,6 +38,13 @@
                 <label asp-for="UserBookEntry.UserEmail" class="control-label"></label>
                 <select asp-for="UserBookEntry.UserEmail" class="form-control"
                         asp-items="@Model.UserEmails">
+                </select>
+            </div>
+            <div class="form-group">
+                <label asp-for="UserBookEntry.Book" class="control-label"></label>
+                <select asp-for="UserBookEntry.Book" class="form-control"
+                        asp-items="@Model.Books">
+                    <option value="">-- Select Book --</option>
                 </select>
             </div>
             <div class="form-group">
