progress on tying tables together for display

--- a/project/Final Project/ReadingListManager/Pages/Index.cshtml
+++ b/project/Final Project/ReadingListManager/Pages/Index.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Welcome to bookShelf!</h1>
+    <p>Register for an account and start adding books to myShelf now!</p>
+    <p>Head over to the communityShelf and look through a list of books to find your next great adventure</p>
 </div>
